# SimDetect

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  NOTES.md  README.MD  TODO.md
lib/common/: constants.h
lib/encoding/: cbor.h
lib/evm/: disassembler.cpp  disassembler.h  opcode.cpp  opcode.h
lib/evm/cfg/: block.cpp  block.h  cfg.h
lib/logger/: logger.cpp  logger.h
lib/util/: hex.cpp  hex.h
misc/: extractInstructions.js
src/: main.cpp
